Fix firefox overflow issue + clean up card component

--- a/src/components/common/card/card.module.scss
+++ b/src/components/common/card/card.module.scss
@@ -73,15 +73,15 @@
       }
     }
 
-    &:after {
-      content: '';
-      background-image: linear-gradient(180deg, rgba($colors-monochrome-1, 0) 50%, $colors-monochrome-1);
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      height: 50%;
-    }
+    // &:after {
+    //   content: '';
+    //   background-image: linear-gradient(180deg, rgba($colors-monochrome-1, 0) 50%, $colors-monochrome-1);
+    //   position: absolute;
+    //   left: 0;
+    //   bottom: 0;
+    //   width: 100%;
+    //   height: 50%;
+    // }
   }
 
   &.img {
@@ -92,7 +92,7 @@
   }
 
   .body {
-    padding: $gaps-gap-8;
+    padding: $gaps-gap-5;
     padding-bottom: 0px;
 
     &.with-link {
@@ -118,10 +118,14 @@
     .title {
       @include fonts-lg;
       @include fonts-bold;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
       margin-bottom: 0px;
     }
 
     .text {
+      @include fonts-sm;
       margin-top: $gaps-gap-4;
       overflow: hidden;
       color: rgba(97, 97, 97, 1);
@@ -138,7 +142,7 @@
         color: $colors-main-light;
         display: flex;
         text-transform: uppercase;
-        margin-top: $gaps-gap-3;
+        margin-top: $gaps-gap-1;
         margin-bottom: $gaps-gap-3;
 
         > * {
@@ -151,7 +155,8 @@
       }
 
       .read-more {
-        @include fonts-section-link;
+        // @include fonts-section-link;
+        @include fonts-bold;
         border-top: 1px solid rgba($colors-monochrome-10, 0.1);
         padding-top: $gaps-gap-3;
         padding-bottom: $gaps-gap-3;
